--- a/src/metric-engine/Cargo.toml
+++ b/src/metric-engine/Cargo.toml
@@ -7,7 +7,7 @@ license.workspace = true
 [dependencies]
 api.workspace = true
 async-trait.workspace = true
-base64 = "0.21"
+base64.workspace = true
 common-error.workspace = true
 common-macro.workspace = true
 common-query.workspace = true
