--- a/src/catalog/Cargo.toml
+++ b/src/catalog/Cargo.toml
@@ -38,7 +38,7 @@ regex.workspace = true
 serde.workspace = true
 serde_json = "1.0"
 session = { workspace = true }
-snafu = { version = "0.7", features = ["backtraces"] }
+snafu.workspace = true
 store-api = { workspace = true }
 table = { workspace = true }
 tokio.workspace = true
