--- a/src/common/catalog/Cargo.toml
+++ b/src/common/catalog/Cargo.toml
@@ -7,7 +7,7 @@ license.workspace = true
 [dependencies]
 common-error = { workspace = true }
 common-macro = { workspace = true }
-snafu = { version = "0.7", features = ["backtraces"] }
+snafu.workspace = true
 
 [dev-dependencies]
 chrono.workspace = true
