--- a/src/common/recordbatch/Cargo.toml
+++ b/src/common/recordbatch/Cargo.toml
@@ -13,7 +13,7 @@ datatypes = { workspace = true }
 futures.workspace = true
 paste = "1.0"
 serde.workspace = true
-snafu = { version = "0.7", features = ["backtraces"] }
+snafu.workspace = true
 
 [dev-dependencies]
 serde_json = "1.0"
