--- a/src/common/time/Cargo.toml
+++ b/src/common/time/Cargo.toml
@@ -12,7 +12,7 @@ common-error = { workspace = true }
 common-macro = { workspace = true }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-snafu = { version = "0.7", features = ["backtraces"] }
+snafu.workspace = true
 
 [dev-dependencies]
 rand.workspace = true
