--- a/src/datanode/Cargo.toml
+++ b/src/datanode/Cargo.toml
@@ -59,7 +59,7 @@ serde.workspace = true
 serde_json = "1.0"
 servers = { workspace = true }
 session = { workspace = true }
-snafu = { version = "0.7", features = ["backtraces"] }
+snafu.workspace = true
 sql = { workspace = true }
 storage = { workspace = true }
 store-api = { workspace = true }
