--- a/src/datatypes/Cargo.toml
+++ b/src/datatypes/Cargo.toml
@@ -25,4 +25,4 @@ ordered-float = { version = "3.0", features = ["serde"] }
 paste = "1.0"
 serde.workspace = true
 serde_json = "1.0"
-snafu = { version = "0.7", features = ["backtraces"] }
+snafu.workspace = true
