--- a/src/promql/Cargo.toml
+++ b/src/promql/Cargo.toml
@@ -23,7 +23,7 @@ prometheus.workspace = true
 promql-parser = "0.1.1"
 prost.workspace = true
 session = { workspace = true }
-snafu = { version = "0.7", features = ["backtraces"] }
+snafu.workspace = true
 table = { workspace = true }
 
 [dev-dependencies]
