--- a/src/query/Cargo.toml
+++ b/src/query/Cargo.toml
@@ -49,7 +49,7 @@ regex.workspace = true
 serde.workspace = true
 serde_json = "1.0"
 session.workspace = true
-snafu = { version = "0.7", features = ["backtraces"] }
+snafu.workspace = true
 sql.workspace = true
 store-api.workspace = true
 substrait.workspace = true
