--- a/src/sql/Cargo.toml
+++ b/src/sql/Cargo.toml
@@ -19,7 +19,7 @@ itertools.workspace = true
 lazy_static.workspace = true
 once_cell.workspace = true
 regex.workspace = true
-snafu = { version = "0.7", features = ["backtraces"] }
+snafu.workspace = true
 sqlparser.workspace = true
 sqlparser_derive = "0.1"
 table = { workspace = true }
