--- a/src/storage/Cargo.toml
+++ b/src/storage/Cargo.toml
@@ -39,7 +39,7 @@ prost.workspace = true
 regex = "1.5"
 serde.workspace = true
 serde_json = "1.0"
-snafu = { version = "0.7", features = ["backtraces"] }
+snafu.workspace = true
 store-api = { workspace = true }
 table = { workspace = true }
 tokio-util.workspace = true
